Correct z-index GitHub logo issue

--- a/src/styles/notice.css
+++ b/src/styles/notice.css
@@ -6,6 +6,7 @@
   position: fixed;
   right: 0;
   vertical-align: middle;
+  z-index: 3;
 }
 
 .notice img {
